# Anomaly-Detection

./: AnomalyDetector.ipynb  README.md  app.py  common_companies.py  main.py  normalize_columns.py  pyproject.toml  requirements.txt  res.json
aggregators/: __init__.py  base_aggregator.py  baseaggregator.py  interday_aggregator.py  interdayaggregator.py  intraday_aggregator.py  intradayaggregator.py
analysis/: visualizer.py
data/: FinalCompanies.csv
data/interday/: ADBL.csv  AHPC.csv  AKJCL.csv  AKPL.csv  ALICL.csv  API.csv  BARUN.csv  BFC.csv  BPCL.csv  CFCL.csv  CGH.csv  CHCL.csv  CHDC.csv  CHL.csv  CIT.csv  CORBL.csv  CZBIL.csv  DHPL.csv  EBL.csv  EDBL.csv  GBBL.csv  GBIME.csv  GFCL.csv  GHL.csv  GLH.csv  GMFIL.csv  GRDBL.csv  GUFL.csv  HBL.csv  HDHPC.csv  HIDCL.csv  HPPL.csv  HURJA.csv  ICFC.csv  JBBL.csv  JFL.csv  JOSHI.csv  KBL.csv  KKHC.csv  KPCL.csv  (+63 more)
engines/: engine.py
features/: base.py  interday.py  intraday.py  registry.py
filter/: filter.py
filters/: filter.py
loaders/: __init__.py  base_loader.py  interday_loader.py  interdayloader.py  intraday_loader.py  intradayloader.py
pipeline/: run_pipeline.py
src/aggregators/: base_aggregator.py  interday_aggregator.py  intraday_aggregator.py
src/analysis/: anomaly_evaluator.py  hyperparameter_tuning.py  matplotlib_visualizer.py  mpf_visualizer.py
src/engines/: dbscan_engine.py  engine.py  isolation_engine.py  residuals_engine.py  zscore_engine.py
src/features/: interday.py  intraday.py
src/filters/: filter.py
utils/: common_companies.py  normalize_columns.py  paths.py
(+10161 files in other folders)
