[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-engine"
version = "0.1.0"
description = "NEPSE anomaly detection pipeline"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "scipy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
